Function.prototype.toString is incorrect for ArrowFunction https://bugs.webkit.org/show_bug.cgi?id=148148

Source/JavaScriptCore:

Patch by Aleksandr Skachkov <gskachkov@gmail.com> on 2015-08-25
Reviewed by Saam Barati.

Added correct support of toString() method for arrow function.

* parser/ASTBuilder.h:
(JSC::ASTBuilder::createFunctionMetadata):
(JSC::ASTBuilder::createArrowFunctionExpr):
* parser/Nodes.cpp:
(JSC::FunctionMetadataNode::FunctionMetadataNode):
* parser/Nodes.h:
* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFunctionBody):
(JSC::Parser<LexerType>::parseFunctionInfo):
* parser/SyntaxChecker.h:
(JSC::SyntaxChecker::createFunctionMetadata):
* runtime/FunctionPrototype.cpp:
(JSC::functionProtoFuncToString):
* tests/stress/arrowfunction-tostring.js: Added.

LayoutTests:

Patch by Skachkov Oleksandr <gskachkov@gmail.com> on 2015-08-25
Reviewed by Saam Barati.

Added test of toString() method.

* js/arrowfunction-tostring-expected.txt: Added.
* js/arrowfunction-tostring.html: Added.
* js/script-tests/arrowfunction-tostring.js: Added.

Canonical link: https://commits.webkit.org/166547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188928 268f45cc-cd09-0410-ab3c-d52691b4dbfc